#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
EB-2011-04-15-1: Bugfix:     check_option_pty somtimes fails  
                 Issue:      TS-386
                 Review:     SH

EB-2011-04-15-0: Bugfix:     fixed failing TS tests that failed due to long
                             long hostnames
                 Issue:      TS-384
                 Review:     SH

JG-2011-04-15-0: Enhancem.:  Extended and activated bugs/jira/3306.
                 Review:     SH

JG-2011-04-14-1: Bugfix:     testsuite function translate doesn't handle
                             float/double parameters
                 Issue:      TS-385
                 Review:     DG

EB-2011-04-14-0: Bugfix:     Fixed failing home_dirs test
                 Review:     DG

JG-2011-04-14-0: Enhancem.:  new test for issue GE-3306: jobs get scheduled but
                             are not started after global host changed
                             test still disabled until code is checked in
                 Review:     SH

SH-2011-04-14-0: Enhancem:   Added check for qsub -pty feature
                 Review:     JG

DG-2011-04-13-0: Bugfix:     when trying to install (19) and a expect binary
                             is not available for a host an error message
                             is generated
                 Review:     SH

DG-2011-04-08-0: Cleanup:    added bash as allowed login_shell like in default
                             UGE installation
                 Review:     EB

HP-2011-04-07-0: Bugfix:     Fixed bug in qmod_auto_reschedule test that was
                             introduced with HP-2011-04-05-0