@@ -6,7 +6,12 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
-EB-2011-04-15-1: Bugfix:     check_option_pty somtimes fails  
+
+JG-2011-04-18-0: Bugfix:     removed an invalid scenario in ge 3306 test
+                 Belongs to: JG-2011-04-15-0
+                 Review:     SH
+
+EB-2011-04-15-1: Bugfix:     check_option_pty somtimes fails
                  Issue:      TS-386
                  Review:     SH
 
